# noaa-gefs

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  docker_env  environment.yml  mypy.ini  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: collection.json  item.json
scripts/: test
src/stactools/noaa_gefs/: __init__.py  commands.py  constants.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/ncep/atmos/: geavg.t00z.pgrb2a.0p50.f000  geavg.t00z.pgrb2a.0p50.f000.idx  geavg.t00z.pgrb2s.0p25.f000  geavg.t00z.pgrb2s.0p25.f000.idx  geavg.t12z.pgrb2a.0p50.f000  gec00.t00z.pgrb2a.0p50.f003  gec00.t00z.pgrb2a.0p50.f003.idx  gec00.t00z.pgrb2b.0p50.f000  gec00.t00z.pgrb2b.0p50.f000.idx  gep01.t00z.pgrb2a.0p50.f012  gep01.t00z.pgrb2a.0p50.f012.idx  gep30.t00z.pgrb2a.0p50.f384  gep30.t00z.pgrb2a.0p50.f384.idx  gespr.t12z.pgrb2a.0p50.f000  gespr.t12z.pgrb2a.0p50.f000.idx
tests/data-files/ncep/chem/: gefs.chem.t00z.a2d_0p25.f000.grib2  gefs.chem.t00z.a2d_0p25.f000.grib2.idx  gefs.chem.t00z.a2d_0p25.f120.grib2  gefs.chem.t00z.a2d_0p25.f120.grib2.idx  gefs.chem.t06z.a3d_0p50.f000.grib2  gefs.chem.t06z.a3d_0p50.f000.grib2.idx
tests/data-files/ncep/wave/: gefs.wave.t00z.c00.global.0p25.f000.grib2  gefs.wave.t00z.c00.global.0p25.f000.grib2.idx  gefs.wave.t00z.c00.global.0p25.f384.grib2  gefs.wave.t00z.c00.global.0p25.f384.grib2.idx  gefs.wave.t00z.mean.global.0p25.f000.grib2  gefs.wave.t00z.p01.global.0p25.f006.grib2  gefs.wave.t00z.p01.global.0p25.f006.grib2.idx  gefs.wave.t00z.p30.global.0p25.f384.grib2  (+5 more)
