[metadata]
name = stactools-noaa-gefs
version = attr: stactools.noaa_gefs.__version__
description = stactools package for a variety of NOAA''s Global Ensemble Forecast System (GEFS) products 
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias.mohr@radiant.earth
url = https://github.com/stactools-packages/noaa-gefs
project_urls =
    Issues = https://github.com/stactools-packages/noaa-gefs/issues
keywords =
    stactools
    noaa
    global
    ensemble
    forecast
    gefs
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.1
    python-dateutil >= 2.7.0
    types-python-dateutil >= 2.7.0
    pystac >= 1.6.1

[options.packages.find]
where = src
